# ChangeLog for dev-perl/Lab-Measurement
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lab-Measurement/ChangeLog,v 1.12 2013/05/13 19:50:58 dilfridge Exp $

*Lab-Measurement-3.11 (13 May 2013)

  13 May 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +Lab-Measurement-3.11.ebuild:
  Version bump

  27 Mar 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-9999.ebuild:
  Improve dependency specification

  27 Mar 2013; Michael Palimaka <kensington@gentoo.org>
  Lab-Measurement-9999.ebuild:
  Migrate to EAPI 5. Depend on dev-lang/perl[ithreads].

*Lab-Measurement-3.10 (05 Aug 2012)

  05 Aug 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -Lab-Measurement-2.96.ebuild, +Lab-Measurement-3.10.ebuild:
  Version bump; remove old

*Lab-Measurement-3.00 (12 Jul 2012)

  12 Jul 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -Lab-Measurement-2.94.ebuild, +Lab-Measurement-3.00.ebuild,
  Lab-Measurement-9999.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*Lab-Measurement-2.96 (01 May 2012)

  01 May 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-2.94.ebuild, +Lab-Measurement-2.96.ebuild:
  Version bump

  01 Mar 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add missing cpan remote-id tags in metadata.xml (#406287)

  19 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-9999.ebuild:
  Add missing dependencies Encode, TeX::Encode

  30 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-2.94.ebuild, Lab-Measurement-9999.ebuild:
  Make this unified live/non-live ebuild actually work...

  30 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  Lab-Measurement-2.94.ebuild, Lab-Measurement-9999.ebuild:
  Remove duplicate setting of KEYWORDS

*Lab-Measurement-9999 (29 Jan 2012)
*Lab-Measurement-2.94 (29 Jan 2012)
