@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lab-Measurement/Lab-Measurement-9999.ebuild,v 1.7 2013/03/27 23:08:31 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lab-Measurement/Lab-Measurement-9999.ebuild,v 1.8 2013/06/10 17:59:08 dilfridge Exp $
 
 EAPI=5
 
@@ -24,7 +24,7 @@ HOMEPAGE="http://www.labmeasurement.de/"
 LICENSE="|| ( Artistic GPL-2 )"
 
 SLOT="0"
-IUSE="debug"
+IUSE="debug +xpression"
 
 RDEPEND="
 	dev-perl/Clone
@@ -47,6 +47,9 @@ RDEPEND="
 		dev-lang/perl[ithreads]
 		dev-perl/wxperl
 	)
+	xpression? (
+		dev-perl/wxperl
+	)
 "
 DEPEND="
 	${RDEPEND}
@@ -54,8 +57,10 @@ DEPEND="
 "
 
 pkg_postinst() {
-	elog "You may want to install one or more backend driver modules. Supported are"
-	elog "    sci-libs/linuxgpib    Open-source GPIB hardware driver"
-	elog "    dev-perl/Lab-VISA     Bindings for the NI proprietary VISA driver"
-	elog "                          stack (dilfridge overlay)"
+	if ( ! has_version sci-libs/linuxgpib ) && ( ! has_version dev-perl/Lab-VISA ) ; then
+		elog "You may want to install one or more backend driver modules. Supported are"
+		elog "    sci-libs/linuxgpib    Open-source GPIB hardware driver"
+		elog "    dev-perl/Lab-VISA     Bindings for the NI proprietary VISA driver"
+		elog "                          stack (dilfridge overlay)"
+	fi
 }
