@@ -7,25 +7,25 @@ DIST Lab-Measurement-3.11.tar.gz 151259 SHA256 ce310b85c4c249262cfefc9ad1f069f4e
 EBUILD Lab-Measurement-3.00.ebuild 1466 SHA256 2b6566821c39257bb3d6f8ffaa9483f1478a934c9b10b31730b4fd98cb980396 SHA512 47a9dbe271772821790e832d039f998526ac84007aa8a27816ff3a5028f1913592514452ffc73f715a1d1d1f8b245a0fa49b715022c8e3b504538e5d4fedef1c WHIRLPOOL c842ccd331b4a655cfca1411cc1f06727c472f13fdb9a3030f4796fa3c161f041cd23c3753af2533b4aab5263f02f24b2fa5ec30321356eb3f8a9eb455355535
 EBUILD Lab-Measurement-3.10.ebuild 1466 SHA256 6e83bbe1794dad274774466d18ce2db0da3ea456414a91c4e953f2d49d0d9cc5 SHA512 54f9a366b2797ece0ade524d7c64174da859d497976ceed108a4b6f5ddb0c00d590061f54630948bd3accdb40fd58c8ed5c1bf022b9d97fca8f769a981ab392e WHIRLPOOL 103c5dd5c48c64d23a1ed07986db787821f6568fca56173b801de551594486e3a22da0755d36aee969d14628843accafb683eacf84f5a55d5af446a30b3137b4
 EBUILD Lab-Measurement-3.11.ebuild 1466 SHA256 59a289ac749c657e9c22636b5a7a03e223adbc6eeb383ff044793b083da60a7c SHA512 549cbd895580d9c3720a500b3077b6ca0d9ed9ddab7e2267e1196cfaec1d1aecfd1bd04318d5d87be29cc714417965be22f84fee3172727588568e9eb36c7c9b WHIRLPOOL 72353fd1ceb1b1194100bc19692779b343bfa2c05146369f9fb9d1a5099b20739735e5dc931732523da64e56af2937b257854ce7f0878e05419fb22e3be64d70
-EBUILD Lab-Measurement-9999.ebuild 1521 SHA256 63801ee50f352e1362e2d23031aa391cc6dba46a47bbb612c2a2c3b519c99c5f SHA512 d5de8741c5c4d6b39152ab46e0d0699387879917e7db7e0b3e94ba1ac23bb1950744f5ebd70a806baec6ae9a9c2fec0281308b02205409793926f7bf39723744 WHIRLPOOL 298b613b19715e9dc6b1ed5a21614d761acef8c614655358b05e2faee736656394d987c7d507e55ae60acb0c7d8b3d5b0e837e2eac38cf4aee50e0100c3320a5
-MISC ChangeLog 2097 SHA256 f785563b5ae21cb5257fcdec37871fde6210919d16d119f67b89e2a781c8ed8e SHA512 f4d3c7665dd7414d2810faf4ca62bf179031ac44ad2c053e3204e341aca2e8f596eadf1dc8f23f54499e99bef83cb421bc4e78dc9bb4f7aa4c12af96ce2a507b WHIRLPOOL 6c14112edf02b403e934ce1fd9ccf63bb6b1f210c5c77d44ca9db7bd353b09b532a8973ced7968fb4562ef9aec3e242d99a1031cdb4631c3b4e56620f2d7111b
-MISC metadata.xml 2999 SHA256 01b33840aa52ba67573440ed2b001d68b1446ff815da2731596c2a057f3127bc SHA512 13129b3bb668d9274e21fc005e2b75aba823b4df903c41b544f242559460406831436fee27b201247d079ab1bc36096e928520c898aeb04fe51dc9c0e85a7bf2 WHIRLPOOL a6c3369e8727d5784f07fe35c10750dd40ab3854b643c3918092b99a3493e9c912bdfe7b36c0326cb787d498d778c5766bb3925ad814aa7232bd4b2dba29f92b
+EBUILD Lab-Measurement-9999.ebuild 1662 SHA256 1be54715101ce70bd42b44656bc3fa2b04bc7968496b311c1b0ab75e30a2885a SHA512 1ccefe30040196ec5b1fd9783f480b197b5587c501fbcafdabb2f1253c561475fa51d6102420cc54a4a87d3347f4749b958f0e0849b5626344f021105a71d72d WHIRLPOOL 3bead9f99ecab3eee0bcbccea045720c76a837306ceffd3946f11a40ca36275845a07f51d96a8c1afcbd1d0a5817badc2a56e8b9e7aeb4e449cabd8669bdec9a
+MISC ChangeLog 2221 SHA256 8707dc199adc73b55e98a668e3e4125cd7869830df24d9bc8fb2f070e154226f SHA512 6d43c50a19e65b5ba0a62658c2b9c1e0c19c44af338e82ffcb4b452e85d072fe5dbe2265b35cf14f110b813d87f737d4c2fe1beb17dceebb8e3734a4cdab5278 WHIRLPOOL e925ea47f9374ad577ad7bcd8825897436f656b2bb5099345076d23429520a212b1e5cb685f91532acf00c97717db658500f0eafc71ae42654763df8518d5880
+MISC metadata.xml 3111 SHA256 fb9894e6d09bd7986764457081774179a4823ee57d7bacee4fed1bb60a305768 SHA512 87ff272688fcb9841c00aa3cb167047c9653c7e9953af8f06d0d0b9044a0f72f3cadfe81fb7811ff128e93174a84c09e1238314cb7abde4baa3e21771fc23ce9 WHIRLPOOL 89e5d8d81cd232a7b191735cf8b7c4a5c3b9b3b66a46371a51adfed4cb2c26627bf07b62ac7d28f756abb0641a5366da3ec1d0098663ab7f645aa8759440113a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQJ8BAEBCABmBQJRkUSBXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOctFsP/jo0yk0A+kj5NN5OFGKNekle
-qPKtat7BTQZjo+AFLE4JFNRE5wRHioua1AEORL8nymyC7mpZgxAPdmQP0f9CDhhr
-OWInXlga8hT77CBEEGCwaLipIgy0jxY+dA7dE27FyxKBMB24AF3iTFaV3GnD8MpR
-IUJCF4xcNPPgqFC9C7iGeBNmY939i9sJM7PBxMas6yKEZLDk5Imi4Go0bxLBmU5k
-vrFbtBbf2D6Ji2xLM6P7D0EaLo8LXWyT/jUpDTq1A9tFbclVTLKsscBd9vTwpCHt
-LcjQB/TF1yxXOioSl8INx1AmO1zj7t7HDCWiWdW7GG8lTXxXwtznbATSget9uIE4
-mFq21LZ+As1t4PRHTHFWO8K27XOnSZjvtpZx/ayW23S+Ak94Ok+zcqdueKos9vRF
-wfipsgzGPe15JLFA+H/uhUCDrg408fsC7BQddzZ+/l04jdhbJXOTGy3dHA+hwrkr
-gbTYrrzCrRtazHw7RabBOFairDvydLUf9p/o87B2dklo7SJS+f797LX3VwAVkB42
-5sr1Jf7qJuQk4UBVFUqmueyRzMzdug4yLDkl0u5v67m+RrOtWgR2lZ5Uq8SitzOw
-Bn2Bx8FjnpGG+68vKfbn2zvkWqVUG9HHkik8CLPoiCnXTS8VspZzH5VKMnlnzZRM
-00Ku4ggNJWvcVti+dgez
-=O6Es
+iQJ8BAEBCABmBQJRthOuXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNUIxN0RGNTc1MjU3N0NBMEM1NDFDRUI5
+NEJGREY0NDg0QUQxNDJGAAoJEJS/30SErRQvSUoP/RcCMoqBr8CAljgfV+lfe3RI
+Inb/HXYO4oajo0psaU5Y5lW/+Ll74Z8hcUWchrDjGKrBJ3VFGI0rPUPX1wrWf610
+7S+ZT3608530Nx5GwWWA9Nb/5KRJngKN1hnpzrSoxVENbFgMEHqviMGHwzDNY9Hw
+sfZXnO+Rk+yhRMesFnCoAVN/8AfWICnRU0L2oJxC3ODQmX9KiVnDB8YSWoilDzxX
+tS4eCyhkg2fancXVLExcjbP9GoVrLOvM7SbHI9yNo4oSkyR/e5m1DvkK6qwbcw+c
+yPKCl+LeRZkuDxLFSRgISWN/QhX/JlQySy4OTnuTMyWpeLmmroSY0IAg0wzzI6QF
+8wwLKfhHZ8DaKStkhjXoh8zxQNFo+jHoAOOVelbrxtshgdX4EJWoFI/ZUoG+xAo4
+OUFXC6yPCIGKMcD/z60XV7VkjjTr9Ams3HE+rqghbt42r3x1i4Sa4LGNS6DSkLbM
+4wdQQUZ6mUNgicAky1HPKMI7iqjIVYwNd60z0kD/zFuyP7KcU3H92+W1+SeihkyR
+zhqiaQAhDswcvcs9ugnUlTq8LAkJv1ijM8q8jQeb9+bCtX44CqZV73th+bv4bKq8
+mu5cgRX8+avcp+R64VQOXXM72rjU397NhHLQJwUjuPwmBFaacdISj5KCKJA5xfvf
++FRJub8kp02MlTyE3vKK
+=u5th
 -----END PGP SIGNATURE-----
