@@ -6,6 +6,9 @@
 		<email>dilfridge@gentoo.org</email>
 		<name>Andreas K. Huettel</name>
 	</maintainer>
+        <use>
+                <flag name="xpression">Install the Xpression measurement framework</flag>
+	</use>
 	<upstream>
 		<remote-id type="cpan">Lab-Measurement</remote-id>
 		<remote-id type="cpan-module">Lab::Bus</remote-id>
